# amzn-sales-project

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
config/: params.yaml
nbs/: 01-explore-data.ipynb  02-explore-rag.ipynb
src/: data_ingestion_pipeline.py  logging_utils.py  model_evaluation_pipeline.py  model_inference_pipeline.py  model_training_pipeline.py  rag_pipeline.py  run_api.py
src/api/: __init__.py  app.py  models.py  predictor.py  rag.py
src/data_ingestion/: data_quality.py  load_csv.py  preprocess_data.py  rag_data_ingestion.py  validate_data.py
src/model_trainers/: model_factory.py  trainer.py
src/rag_chains/: qa_chain.py
tests/: conftest.py  test_api_endpoints.py  test_loader_validator_transformer.py  test_qa_chain.py  test_rag_data_ingestion.py
