[project]
name = "amzn-sales-project"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.3.0",
    "dvc>=3.63.0",
    "fastapi>=0.120.4",
    "joblib>=1.5.2",
    "langchain-classic>=1.0.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.0.0",
    "langchain-huggingface>=1.0.0",
    "mlflow>=3.5.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.7.2",
    "sentence-transformers>=5.1.2",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
]
